2004-01-08  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/consttab.cpp :
	* lib/consttab.h :
	* lib/expression.cpp :
	* lib/expression.h :
	* lib/fact.cpp :
	* lib/fact.h :

	  - Added a replace() function to be used for variable grounding.

2004-01-06  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Tagged vlad-1_1_0

	* samples/chwall.vla :
	* samples/chwall.vlp :
	* samples/docrel.vla :
	* samples/docrel.vlp :
	* samples/chwall.ops :
	* samples/chwall.prg :
	* samples/docrel.ops :
	* samples/docrel.prg :

	  - Changed file extensions to vlp and vla (VLad Policy and VLad
	     Agent files).

2004-01-05  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/kb.cpp :
	* lib/kb.h :

	  - Removed completely, replaced by polbase,

	* main/Makefile.in :
	* main/parser.h :
	* main/vlad.cpp :
	* main/agent.l :
	* main/agent.y :
	* main/policy.l :
	* main/policy.y :
	* main/operation.l :
	* main/operation.y :
	* main/program.l :
	* main/program.y :

	  - Renamed program to policy and operation to agent.

2004-01-04  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/updatetab.cpp :
	* lib/updatetab.h :
	* lib/transtab.cpp :
	* lib/transtab.h :

	  - Transtab now replaced by updatetab.

	* lib/atom.cpp :
	* lib/atom.h :

	  - Removed and replaced by the new fact.cpp and fact.h.

	* lib/fact.cpp :
	* lib/fact.h :

	  - Added type() and truth() functions.

	* lib/seqtab.cpp :
	* lib/seqtab.h :

	  - Renamed transformation to update (trasnref to updateref).

	* lib/wrapper.cpp :
	* lib/wrapper.h :

	  - Cleanup. Modified to keep up with all the name changes.

	* lib/polbase.cpp :
	* lib/polbase.h :

	  - Added verify functions.

	  - Cleanup. Modified to keep up with all the name changes.

2003-12-31  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/smwrap.cpp :
	* lib/smwrap.h :
	* lib/transtab.cpp :
	* lib/transtab.h :
	* lib/seqtab.cpp :
	* lib/seqtab.h :
	* lib/consttab.cpp :
	* lib/consttab.h :
	* lib/expression.cpp :