@@ -7,6 +7,7 @@
 #define __VLAD_CONSTTAB_H
 
 #include <vlad/list.h>
+#include <vlad/stringlist.h>
 #include <vlad/expression.h>
 
 /* consttab list is simply a list of expression/condition pairs */
@@ -21,6 +22,8 @@ class constraint : public list_item
     int get(expression **a_exp, expression **a_cond, expression **a_ncond);
     /* replaces occurences of var with ident. creates a new constraint */
     int replace(const char *a_var, const char *a_ident, constraint **a_constr);
+    /* gives a list of vars occuring in the constr, creats a new constr */
+    int varlist(stringlist **a_list);
   private :
     bool m_init;
     expression *m_exp;
